# list-files-cli

./: Cargo.toml  README.md
src/: app.rs  app_tests.rs  binary.rs  binary_tests.rs  cli.rs  clipboard.rs  fs.rs  lib.rs  main.rs  patterns.rs  patterns_tests.rs  tokenizer.rs  tokenizer_tests.rs
tests/: coverage.rs  gitignore_cases.rs  hidden.rs
