[package]
name = "lf"
description = "List files with optional line and token counts"
version = "0.1.0"
edition = "2024"
default-run = "lf"

[features]
default = ["token-counting"]
token-counting = ["dep:tiktoken-rs"]

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["derive"] }
arboard = "3"
tiktoken-rs = { version = "0.5", optional = true }
globset = "0.4"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
ignore = "0.4"

[profile.release]
opt-level = "z"            # Optimize for size
lto = true                 # Enable link-time optimization
codegen-units = 1          # Better optimization at the cost of compile time
strip = true               # Strip symbols
panic = "abort"            # Remove unwinding machinery

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
